# project_00819

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  format.sh  report.tex
etc/: CMakeLists.txt
etc/audio/: CMakeLists.txt  README.md  audio.cpp  audio.hpp
etc/logs/: CMakeLists.txt  README.md  logs.cpp  logs.hpp
etc/nostd/: CMakeLists.txt  README.md  string.cpp  string.hpp  vector.hpp
src/: CMakeLists.txt  constant.hpp  main.cpp
src/draw/: CMakeLists.txt  draw.cpp  draw.hpp  screen.cpp  screen.hpp
src/engine/: CMakeLists.txt  events.cpp  events.hpp  jump_lib.cpp  jump_lib.hpp  manager.cpp  manager.hpp  random.cpp  random.hpp  seed.cpp  seed.hpp
src/entity/: CMakeLists.txt  bullet.cpp  bullet.hpp  coin.cpp  coin.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  manager.cpp  manager.hpp  types.cpp  types.hpp
src/game/: CMakeLists.txt  Credits.txt  credits.cpp  credits.hpp  file.cpp  file.hpp  game.cpp  game.hpp  global.cpp  global.hpp  map.cpp  map.hpp  menu.cpp  menu.hpp  save.cpp  save.hpp  settings.cpp  settings.hpp  statistics.cpp  statistics.hpp
src/maps/: CMakeLists.txt  chunk.cpp  chunk.hpp  map.cpp  map.hpp  platform.cpp  platform.hpp
src/market/: CMakeLists.txt  ability.cpp  ability.hpp  gun.cpp  gun.hpp  market.cpp  market.hpp
src/nostd/: Makefile  main.cpp  vector.cpp  vector.hpp
src/physics/: CMakeLists.txt  body.cpp  body.hpp  collisions.cpp  collisions.hpp  constant.hpp  constants.hpp  point.cpp  point.hpp  precisePoint.cpp  precisePoint.hpp  vector.cpp  vector.hpp  weightedBody.cpp  weightedBody.hpp
src/physics/test/: .gitignore  Makefile  TEST  main.cpp  point.test.cpp  test.hpp
src/physics/test/tests/: point.test.cpp  test.hpp  vector.test.cpp
src/physics/test/tests/collisions/: main.cpp
src/physics/test/tests/computation/: body.test.cpp  main.cpp  point.test.cpp  vector.test.cpp
src/physics/test/tests/jump/: main.cpp
